src/App.css
.app {
    text-align: center;
    display: flex;
    align-content: center;
    flex-direction: column;
}

.app-header {
    padding: 5px;
    background-color: #eeeeee;
    color: white;
}

.app-body {
    display: flex;
    padding: 10px;
    margin: 10px auto auto;
}

.app-content {
    flex: 1;
    padding-left: 50px;
    padding-right: 50px;
}

.navigation-bar-link {
    color: #ff815a;
}

@media screen and (max-width: 780px) {
    .app-content {
        padding: 10px;
    }
}

